--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: jekyllrb
 github_username:  alexdebeer
 
 # Build settings
-theme: minima
+theme: academic
 plugins:
   - jekyll-feed
 
