--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 curriculum: 
   name: cv
   url: "assets/cv.pdf"
-github_username: alexdebeer
-linkedin_username: alex-debeer
+github_username: alexgdebeer
+linkedin_username: alexgdebeer
 
 # Build settings
 remote_theme: gaalcaras/academic
