--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alex de Beer
-email: adeb970@aucklanduni.ac.nz
+email: adeb0907@uni.sydney.edu.au
 description: 
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
